--- a/src/components/Screen/Screen.css
+++ b/src/components/Screen/Screen.css
@@ -2,7 +2,7 @@
   max-width: 600px;
   width: 450px;
   height: 100vh;
-  border: 1px solid black;
+  /* border: 1px solid black; */
   display: flex;
   flex-direction: column;
 }
